--- a/schliffs/serviccer/R10.yaml
+++ b/schliffs/serviccer/R10.yaml
@@ -1,19 +1,18 @@
-name: SV600
+name: R10
 description: null
-description_ru: универсальная структура −2…−10 на любой тип снега; TOP
+description_ru: −10…−20, любой тип снега
 website_url: https://serviccer.ru/strukturyi.html
 snow_type:
   - all
 snow_temperature:
-  - min: -10
-    max: -2
+  - min: -20
+    max: -10
 condition: ''
 manufactory: ''
 author: Victor Golovin
 country: Россия
 tags:
-  - универсальный
-  - TOP
+  - холод
 similars: []
 features: []
 updated_at: 2025-10-20
@@ -21,3 +20,5 @@ updated_by: https://github.com/klinkin
 archived: false
 service:
   name: Serviccer
+
+
