--- a/schliffs/serviccer/R11-2.yaml
+++ b/schliffs/serviccer/R11-2.yaml
@@ -1,19 +1,20 @@
-name: SV600
+name: R11-2
 description: null
-description_ru: универсальная структура −2…−10 на любой тип снега; TOP
+description_ru: −8…−18, любой тип снега, свежий снег
 website_url: https://serviccer.ru/strukturyi.html
 snow_type:
   - all
+  - fresh
 snow_temperature:
-  - min: -10
-    max: -2
+  - min: -18
+    max: -8
 condition: ''
 manufactory: ''
 author: Victor Golovin
 country: Россия
 tags:
-  - универсальный
-  - TOP
+  - холод
+  - свежий снег
 similars: []
 features: []
 updated_at: 2025-10-20
@@ -21,3 +22,5 @@ updated_by: https://github.com/klinkin
 archived: false
 service:
   name: Serviccer
+
+
