--- a/schliffs/serviccer/SR12-3.yaml
+++ b/schliffs/serviccer/SR12-3.yaml
@@ -1,19 +1,22 @@
-name: SV600
+name: SR12-3
 description: null
-description_ru: универсальная структура −2…−10 на любой тип снега; TOP
+description_ru: тёплый весенний старый снег, вода; от +3 и выше
 website_url: https://serviccer.ru/strukturyi.html
 snow_type:
-  - all
+  - trancformed
+  - wet
+  - water
 snow_temperature:
-  - min: -10
-    max: -2
-condition: ''
+  - min: 3
+    max: 10
+condition: yellow
 manufactory: ''
 author: Victor Golovin
 country: Россия
 tags:
-  - универсальный
-  - TOP
+  - весенний снег
+  - вода
+  - тепло
 similars: []
 features: []
 updated_at: 2025-10-20
@@ -21,3 +24,5 @@ updated_by: https://github.com/klinkin
 archived: false
 service:
   name: Serviccer
+
+
