--- a/schliffs/serviccer/SR15.yaml
+++ b/schliffs/serviccer/SR15.yaml
@@ -1,19 +1,19 @@
-name: SV600
+name: SR15
 description: null
-description_ru: универсальная структура −2…−10 на любой тип снега; TOP
+description_ru: +3…−3, трансформированный снег (фирн)
 website_url: https://serviccer.ru/strukturyi.html
 snow_type:
-  - all
+  - trancformed
 snow_temperature:
-  - min: -10
-    max: -2
-condition: ''
+  - min: -3
+    max: 3
+condition: yellow
 manufactory: ''
 author: Victor Golovin
 country: Россия
 tags:
-  - универсальный
-  - TOP
+  - фирн
+  - трансформированный
 similars: []
 features: []
 updated_at: 2025-10-20
@@ -21,3 +21,5 @@ updated_by: https://github.com/klinkin
 archived: false
 service:
   name: Serviccer
+
+
