--- a/schliffs/serviccer/SR23.yaml
+++ b/schliffs/serviccer/SR23.yaml
@@ -1,19 +1,19 @@
-name: SV600
+name: SR23
 description: null
-description_ru: универсальная структура −2…−10 на любой тип снега; TOP
+description_ru: от −20 к −10 (когда днём отпускает мороз), свежий снег
 website_url: https://serviccer.ru/strukturyi.html
 snow_type:
-  - all
+  - fresh
 snow_temperature:
-  - min: -10
-    max: -2
-condition: ''
+  - min: -20
+    max: -10
+condition: blue
 manufactory: ''
 author: Victor Golovin
 country: Россия
 tags:
-  - универсальный
-  - TOP
+  - свежий снег
+  - холод
 similars: []
 features: []
 updated_at: 2025-10-20
@@ -21,3 +21,5 @@ updated_by: https://github.com/klinkin
 archived: false
 service:
   name: Serviccer
+
+
