--- a/schliffs/serviccer/SV150.yaml
+++ b/schliffs/serviccer/SV150.yaml
@@ -1,19 +1,19 @@
-name: SV600
+name: SV150
 description: null
-description_ru: универсальная структура −2…−10 на любой тип снега; TOP
+description_ru: на тепло +3…+5, весенний снег
 website_url: https://serviccer.ru/strukturyi.html
 snow_type:
-  - all
+  - spring
 snow_temperature:
-  - min: -10
-    max: -2
-condition: ''
+  - min: 3
+    max: 5
+condition: yellow
 manufactory: ''
 author: Victor Golovin
 country: Россия
 tags:
-  - универсальный
-  - TOP
+  - тепло
+  - весенний снег
 similars: []
 features: []
 updated_at: 2025-10-20
@@ -21,3 +21,5 @@ updated_by: https://github.com/klinkin
 archived: false
 service:
   name: Serviccer
+
+
