--- a/schliffs/serviccer/V7-3.yaml
+++ b/schliffs/serviccer/V7-3.yaml
@@ -1,19 +1,20 @@
-name: SV600
+name: V7-3
 description: null
-description_ru: универсальная структура −2…−10 на любой тип снега; TOP
+description_ru: −2…−15, старый снег, хорошо подготовленная трасса
 website_url: https://serviccer.ru/strukturyi.html
 snow_type:
-  - all
+  - trancformed
+  - fine_grained
 snow_temperature:
-  - min: -10
+  - min: -15
     max: -2
 condition: ''
 manufactory: ''
 author: Victor Golovin
 country: Россия
 tags:
-  - универсальный
-  - TOP
+  - старый снег
+  - подготовленная трасса
 similars: []
 features: []
 updated_at: 2025-10-20
@@ -21,3 +22,5 @@ updated_by: https://github.com/klinkin
 archived: false
 service:
   name: Serviccer
+
+
