--- a/schliffs/fischer/C8-1.yaml
+++ b/schliffs/fischer/C8-1.yaml
@@ -1,4 +1,4 @@
-name: С8-1
+name: C8-1
 description: null
 description_ru: более узкая структура для искусственного снега от 0 до -10
 website_url: null
