--- a/schliffs/fischer/P5-9.yaml
+++ b/schliffs/fischer/P5-9.yaml
@@ -1,4 +1,4 @@
-name: Р5-9
+name: P5-9
 description: null
 description_ru: структура для классических лыж на старый мокрый снег, температура
   от 0 и выше
@@ -18,7 +18,7 @@ tags:
   - старый снег
   - мокрый
 similars:
-  - Р3-2
+  - P3-2
   - P9-2
 features:
   - классический стиль
