--- a/schliffs/skipole/X25.yaml
+++ b/schliffs/skipole/X25.yaml
@@ -1,4 +1,4 @@
-name: Х25
+name: X25
 description: null
 description_ru: стуктура для свежего и нового натурального снега, глянец при температуре
   от 0 до -8
