--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "pyyaml (>=6.0.2,<7.0.0)",
     "pydantic (>=2.11.2,<3.0.0)",
     "jinja2 (>=3.1.6,<4.0.0)",
-    "babel (>=2.17.0,<3.0.0)"
+    "babel (>=2.17.0,<3.0.0)",
+    "rich (>=13.7.1,<14.0.0)"
 ]
 
 [tool.poetry.group.dev.dependencies]
