--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "pydantic (>=2.11.2,<3.0.0)",
     "jinja2 (>=3.1.6,<4.0.0)",
     "babel (>=2.17.0,<3.0.0)",
-    "rich (>=13.7.1,<14.0.0)"
+    "rich (>=13.7.1,<14.0.0)",
+    "typer[all] (>=0.12.5,<1.0.0)"
 ]
 
 [tool.poetry.group.dev.dependencies]
