--- a/schliffs/ramsau/OH3.yaml
+++ b/schliffs/ramsau/OH3.yaml
@@ -1,10 +1,12 @@
 ---
 name: OH3
 description: null
-description_ru: структура на переходку и тепло при температуре от +5 до -7
+description_ru: модифицированная S13-5 под Оберхоф; больше под смешанные и сухие снега, не любит сильную воду. По воде возможно, но нужна жесткая, ледянистая основа (фирн).
 website_url: https://vk.com/video-220482174_456239484
 snow_type:
-  - all
+  - trancformed
+  - fine_grained
+  - icy
 snow_temperature:
   - min: -7
     max: 5
@@ -13,12 +15,17 @@ manufactory: Fischer
 author: ''
 country: Germany
 tags:
-  - null
+  - смешанный снег
+  - суше, чем S13-5
+  - Оберхоф
+  - ледянистый фирн
 similars:
+  - S13-5
   - B3312
 features:
   - появился шлифт относительно недавно, сильно позднее S-шлифтов
-updated_at: 2024-04-04
+  - модификация S13-5 под Оберхоф
+updated_at: 2025-10-20
 updated_by: ''
 archived: false
 service:
