--- a/schliffs/beme/_meta.yaml
+++ b/schliffs/beme/_meta.yaml
@@ -1,7 +1,7 @@
 ---
 name: Beme
 description:
-description_ru: Структуры для беговых лыж от Бенжамина Эдера, сервис Beme
+description_ru: Структуры для беговых лыж от Бенжамина Эдера, сервис BAME/Beni
 
 website_url: https://www.bemesports.com/en/skiservice
 
