--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,9 @@
 ---
+default_language_version:
+  python: python3.13
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+    rev: v6.0.0
     hooks:
       - id: check-merge-conflict
       - id: trailing-whitespace
@@ -10,14 +12,19 @@ repos:
         args: [--fix=lf]
       - id: check-added-large-files
         args: ['--maxkb=1024']
+      - id: check-case-conflict
+      - id: check-symlinks
       - id: check-yaml
       - id: check-json
-      # - id: check-toml
-      # - id: no-commit-to-branch
-      #   args: [--branch, main]
+      - id: check-toml
+      - id: check-ast
+      - id: debug-statements
+      - id: detect-private-key
+      - id: no-commit-to-branch
+        args: [--branch, main]
 
   - repo: https://github.com/codespell-project/codespell
-    rev: v2.3.0
+    rev: v2.4.1
     hooks:
       - id: codespell
         args:
@@ -25,13 +32,13 @@ repos:
           - --ignore-words-list=schliff,Schliff,Ramsau,Serviccer,Salomon,Rossignol,Fischer,Madshus,Skipole
 
   - repo: https://github.com/adrienverge/yamllint
-    rev: v1.35.1
+    rev: v1.37.1
     hooks:
       - id: yamllint
         args: ['-d', '{extends: default, rules: {line-length: disable}}']
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.41.0
+    rev: v0.47.0
     hooks:
       - id: markdownlint
         args: ['--disable', 'MD013,MD012,MD024,MD004']
@@ -65,12 +72,3 @@ repos:
         language: python
         types: [file]
         files: ^(schliffs/|README\.md)
-
-  # - repo: local
-  #   hooks:
-  #     - id: check-cyrillic
-  #       name: Forbid Cyrillic in file names and YAML name/similars
-  #       entry: poetry run python scripts/check_cyrillic.py
-  #       language: system
-  #       types: [file]
-  #       files: ^(schliffs/|README\.md)
