--- a/schliffs/serviccer/SR15.yaml
+++ b/schliffs/serviccer/SR15.yaml
@@ -4,7 +4,7 @@ description:
 description_ru: +3…−3, трансформированный снег (фирн)
 website_url: https://serviccer.ru/strukturyi.html
 snow_type:
-  - trancformed
+  - transformed
 temperature:
   - min: -3
     max: 3
