--- a/schliffs/serviccer/V7-3.yaml
+++ b/schliffs/serviccer/V7-3.yaml
@@ -4,7 +4,7 @@ description:
 description_ru: −2…−15, старый снег, хорошо подготовленная трасса
 website_url: https://serviccer.ru/strukturyi.html
 snow_type:
-  - trancformed
+  - transformed
   - fine_grained
 temperature:
   - min: -15
