--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -4,6 +4,17 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 
+# Строгость (как best practice в rendercv):
+# - запрещаем неизвестные маркеры
+# - падаем на неизвестных опциях конфигурации
+addopts =
+    -ra
+    --strict-markers
+    --strict-config
+
+# Если когда-нибудь появятся xfail-тесты — XPASS будет считаться ошибкой
+xfail_strict = true
+
 # Логирование
 log_cli = true
 log_cli_level = INFO
