--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,7 @@ repos:
       - id: check-case-conflict
       - id: check-symlinks
       - id: check-yaml
+        args: [--unsafe]
       - id: check-json
       - id: check-toml
       - id: check-ast
@@ -43,24 +44,24 @@ repos:
       - id: markdownlint
         args: ['--disable', 'MD013,MD012,MD024,MD004']
 
-  # Локальные — через Poetry, чтобы использовать твои версии и конфиги
+  # Локальные — через uv, чтобы использовать зафиксированные версии из uv.lock и конфиги проекта
   - repo: local
     hooks:
       - id: ruff
-        name: Ruff (poetry)
-        entry: poetry run ruff check
+        name: Ruff (uv)
+        entry: uv run --frozen ruff check
         language: system
         types: [python]
 
-      - id: black
-        name: Black check (poetry)
-        entry: poetry run black --check
+      - id: ruff-format
+        name: Ruff format --check (uv)
+        entry: uv run --frozen ruff format --check
         language: system
         types: [python]
 
       - id: mypy
-        name: Mypy (poetry)
-        entry: poetry run mypy steinschliff scripts tests
+        name: Mypy (uv)
+        entry: uv run --frozen mypy steinschliff scripts tests
         language: system
         pass_filenames: false
 
@@ -71,4 +72,4 @@ repos:
         entry: python scripts/check_cyrillic.py
         language: python
         types: [file]
-        files: ^(schliffs/|README\.md)
+        files: ^schliffs/
